# 42-minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  _M  _Makefile  minishell_bonus  test
include/: built-in.h  built_in.h  builtin.h  builtins.h  env_variables.h  error.h  execute_single_line_command.h  execution.h  exit_code.h  expansions.h  get_cursor_x_pos.h  get_here_docs.h  interactive.h  lexer.h  minishell_fork.h  minishell_signal.h  minishell_struct.h  parser.h  prompt.h  quote.h  run_minishellrc.h  terminal.h  tokens.h
lib/libft/: Makefile
lib/libft/include/: ft_char.h  ft_hashmap.h  ft_io.h  ft_linked_list.h  ft_sort.h  ft_string.h  libft.h
lib/libft/src/bitmask/: bitmask_set.c
lib/libft/src/char/: is_in_set.c
lib/libft/src/hashmap/: hm_clear.c  hm_delete_elem.c  hm_get_elem.c  hm_get_keys.c  hm_size.c
lib/libft/src/io/: putchar_fd.c  putendl_fd.c  putstr.c  putstr_fd.c
lib/libft/src/io/printf/: printf.c
lib/libft/src/linked_list/: lst_get_next_free_current.c  lst_of_lst_clear.c  lstmap.c  lstsize.c
lib/libft/src/linked_list/doubly_linked_void_ptr/: dlst_reverse.c
lib/libft/src/linked_list/int/: lsti_get_next_free_current.c
lib/libft/src/linked_list/void_ptr/: lst_remove_if.c  lst_sort.c
lib/libft/src/numbers/: atoll.c
lib/libft/src/sort/: msort_int.c  msort_str.c  msort_str_ignore_case.c
lib/libft/src/string/: is_number.c  skip_set.c  strcmp_ignore_case.c
lib/libft/src/string/split/: split_unless_in_quotes.c
lib/libft/test/: main.c
lib/libft/test/header/: linked_list.h
lib/libft/test/header/test/: hashmap_test.h.c
lib/libft/test/src/linked_list/: doubly_linked_void_ptr.c
libs/libft/: Makefile
libs/libft/include/: ft_io.h  ft_linked_list.h
libs/libft/src/io/: putnbr_fd.c  putstr.c  putstr_fd.c
libs/libft/src/linked_list/: lst_get_next_free_current.c  lstclear.c  lstdelone.c
libs/libft/src/linked_list/int/: lsti_size.c
libs/libft/src/mem/: calloc.c
libs/libft/src/string/: skip_char.c  strdup.c
libs/libft/test/: main.c
src/: execute_single_line_command.c  exit_code.c  free_minishell.c  get_cursor_x_pos.c  get_here_docs.c  here_docs.c  main.c  minishell_fork.c  run_minishellrc.c  signal.c  terminal.c  token.c
src/built-in/: alias.c  cd.c  echo.c  env.c  exit.c  export.c  export_variable.c  export_variables.c  pwd.c  unset.c  update_last_exit_code.c  which.c
src/built-in/alias/: alias.c  get_all_aliases.c
src/built-in/cd/: cd.c  get_cleaned_path.c  handle_cwd_doesnt_exist.c
src/built-in/export/: export.c  export_print.c  export_variable.c  export_variables.c
src/builtin/: env.c  exit.c  pwd.c
src/builtin/alias/: alias.c
src/builtin/cd/: cd.c  handle_cwd_doesnt_exist.c
src/builtin/export/: export.c  variables.c
src/builtins/: echo.c  env.c  unalias.c  unset.c
src/builtins/alias/: alias.c
src/builtins/cd/: cd.c  get_cleaned_path.c  handle_cwd_doesnt_exist.c
src/builtins/export/: export.c  variables.c
src/env_variables/: get_env_variables.c  get_envp.c  print_env_variables.c  tmp.c
src/error/: error.c
src/execution/: exec_free_minishell.c  exec_here_docs_tools.c  execute_command.c  execute_command_no_pipe.c  execute_commands.c  execute_forked_command.c  execute_piped_command.c  execute_pipes.c  execution.c  get_next.c  get_next_command.c  io_save.c  open_and_dup_files.c  run_builtin.c
src/expansions/: alias.c  arguments.c  before_execution.c  files.c  here_docs.c  merge_words.c  parameters.c  parameters_utils.c  quotes.c  tildes.c  token.c  utils.c  words.c  words_splitting.c
src/expansions/lexer/: expressions.c  tokens.c  utils.c
src/expansions/parameters/: replace.c  strdup_parameters.c
src/expansions/paths/: absolute_path.c  add_path.c  builtin.c  command.c
src/expansions/wildcards/: add.c  duplicate.c  insert.c  list.c  match.c  pattern_lexer.c  replace.c  slash.c  utils.c
src/expansions/words/: merge.c  splitting.c
src/interactive/: delimiters.c  here_docs.c  here_docs_syntax.c  input.c  parsing.c  shell.c  utils.c
src/lexer/: identifier.c  operator.c  token.c
src/parser/: interactive.c  interactive_utils.c  new_interactive.c  parse_tokens.c  quotes.c  syntax.c
src/parser/operator/: valid.c
src/parser/quote/: remove.c  valid.c
src/parser/simplify_tokens/: add_command.c  get_subshells.c  simplify_tokens.c
src/parser/simplify_tokens/add_command/: add_args.c  add_command.c  add_command_path.c  add_command_path_args.c  get_args.c  get_files.c
src/parser/simplify_tokens/add_command/add_path/: absolute_path.c  add_path.c  builtin.c  command.c
src/parser/syntax/: is_syntax_ok.c  syntax_tools.c
src/parser/wildcard/: match.c
src/prompt/: add_directory_to_path.c  add_elem_to_prompt.c  add_git_branch.c  get_command_result.c  get_git_branch.c  get_prompt.c  is_valid_term.c
src/signals/: execution_fork.c  fork_signal_handling.c  general_signal_handling.c  get_cursor_x_pos.c  interactive_signal_handling.c  pipes_signal_handling.c
src/simplify_tokens/: add_command.c  simplify_tokens.c
test/include/: tokens.h.c
