cmake_minimum_required(VERSION 3.23)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(include/lexer)
include_directories(lib/libft/include)
include_directories(lib/libft/src/io/get_next_line)
include_directories(lib/libft/test/header)
include_directories(lib/libft/test/include)
include_directories(test/include)

add_executable(minishell
        include/lexer/identifier.h
        include/lexer/operator.h
        include/lexer/token.h
        include/quote.h
        lib/libft/include/ft_bools.h
        lib/libft/include/ft_char.h
        lib/libft/include/ft_io.h
        lib/libft/include/ft_linked_list.h
        lib/libft/include/ft_math.h
        lib/libft/include/ft_mem.h
        lib/libft/include/ft_numbers.h
        lib/libft/include/ft_string.h
        lib/libft/include/libft.h
        lib/libft/src/bools/reverse_bool.c
        lib/libft/src/char/isalnum.c
        lib/libft/src/char/isalpha.c
        lib/libft/src/char/isascii.c
        lib/libft/src/char/isdigit.c
        lib/libft/src/char/isprint.c
        lib/libft/src/char/isspace.c
        lib/libft/src/char/tolower.c
        lib/libft/src/char/toupper.c
        lib/libft/src/io/get_next_line/get_next_line.c
        lib/libft/src/io/get_next_line/get_next_line.h
        lib/libft/src/io/get_next_line/get_next_line_multi_fd.c
        lib/libft/src/io/get_next_line/get_next_line_multi_fd.h
        lib/libft/src/io/get_next_line/get_next_line_utils.c
        lib/libft/src/io/get_next_line/get_next_line_utils_multi_fd.c
        lib/libft/src/io/printf/formating/format.c
        lib/libft/src/io/printf/formating/format_u_x.c
        lib/libft/src/io/printf/get_final_str.c
        lib/libft/src/io/printf/printf.c
        lib/libft/src/io/putchar_fd.c
        lib/libft/src/io/putendl_fd.c
        lib/libft/src/io/putnbr_fd.c
        lib/libft/src/io/putstr.c
        lib/libft/src/io/putstr_fd.c
        lib/libft/src/linked_list/int/lsti_add_back.c
        lib/libft/src/linked_list/int/lsti_add_front.c
        lib/libft/src/linked_list/int/lsti_clear.c
        lib/libft/src/linked_list/int/lsti_cmp.c
        lib/libft/src/linked_list/int/lsti_cpy.c
        lib/libft/src/linked_list/int/lsti_delone.c
        lib/libft/src/linked_list/int/lsti_get_next_free_current.c
        lib/libft/src/linked_list/int/lsti_iter.c
        lib/libft/src/linked_list/int/lsti_last.c
        lib/libft/src/linked_list/int/lsti_map.c
        lib/libft/src/linked_list/int/lsti_new.c
        lib/libft/src/linked_list/int/lsti_push.c
        lib/libft/src/linked_list/int/lsti_reverse.c
        lib/libft/src/linked_list/int/lsti_size.c
        lib/libft/src/linked_list/lst_get_next_free_current.c
        lib/libft/src/linked_list/lst_push.c
        lib/libft/src/linked_list/lst_reverse.c
        lib/libft/src/linked_list/lstadd_back.c
        lib/libft/src/linked_list/lstadd_front.c
        lib/libft/src/linked_list/lstclear.c
        lib/libft/src/linked_list/lstdelone.c
        lib/libft/src/linked_list/lstiter.c
        lib/libft/src/linked_list/lstlast.c
        lib/libft/src/linked_list/lstmap.c
        lib/libft/src/linked_list/lstnew.c
        lib/libft/src/linked_list/lstsize.c
        lib/libft/src/math/angle_to_theta.c
        lib/libft/src/mem/bzero.c
        lib/libft/src/mem/calloc.c
        lib/libft/src/mem/memchr.c
        lib/libft/src/mem/memcmp.c
        lib/libft/src/mem/memcpy.c
        lib/libft/src/mem/memmove.c
        lib/libft/src/mem/memset.c
        lib/libft/src/numbers/swap/swap_double.c
        lib/libft/src/numbers/swap/swap_int.c
        lib/libft/src/numbers/swap/swap_long.c
        lib/libft/src/numbers/swap/swap_size_t.c
        lib/libft/src/numbers/swap/swap_ssize_t.c
        lib/libft/src/numbers/swap/swap_uint.c
        lib/libft/src/numbers/abs.c
        lib/libft/src/numbers/atoi.c
        lib/libft/src/numbers/atoll.c
        lib/libft/src/numbers/itoa.c
        lib/libft/src/string/join/join_strs.c
        lib/libft/src/string/join/strjoin.c
        lib/libft/src/string/split/free_split.c
        lib/libft/src/string/split/split.c
        lib/libft/src/string/split/split_set.c
        lib/libft/src/string/split/split_size.c
        lib/libft/src/string/skip_char.c
        lib/libft/src/string/strchr.c
        lib/libft/src/string/strcmp.c
        lib/libft/src/string/strdup.c
        lib/libft/src/string/striteri.c
        lib/libft/src/string/strlcat.c
        lib/libft/src/string/strlcpy.c
        lib/libft/src/string/strlen.c
        lib/libft/src/string/strmapi.c
        lib/libft/src/string/strncmp.c
        lib/libft/src/string/strnstr.c
        lib/libft/src/string/strrchr.c
        lib/libft/src/string/strtrim.c
        lib/libft/src/string/substr.c
        lib/libft/test/header/test/ft_string_test.h.c
        lib/libft/test/header/ft_string_test.h
        lib/libft/test/include/ft_bools.h.c
        lib/libft/test/include/ft_char.h.c
        lib/libft/test/include/ft_io.h.c
        lib/libft/test/include/ft_linked_list.h.c
        lib/libft/test/include/ft_math.h.c
        lib/libft/test/include/ft_mem.h.c
        lib/libft/test/include/ft_numbers.h.c
        lib/libft/test/include/ft_string.h.c
        lib/libft/test/include/libft.h.c
        lib/libft/test/src/string/join/join_strs_test.c
        lib/libft/test/main.c
        src/lexer/identifier.c
        src/lexer/operator.c
        src/lexer/token.c
        src/parser/quote/remove.c
        src/parser/quote/valid.c
        src/main.c
        test/include/tokens.h.c)
