cmake_minimum_required(VERSION 3.24)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/libft/include)
include_directories(lib/libft/src/io/get_next_line)

add_executable(minishell
        include/built_in.h
        include/env_variables.h
        include/error.h
        include/execute_single_line_command.h
        include/execution.h
        include/exit_code.h
        include/expansions.h
        include/get_cursor_x_pos.h
        include/get_here_docs.h
        include/interactive.h
        include/lexer.h
        include/minishell_signal.h
        include/minishell_struct.h
        include/parser.h
        include/prompt.h
        include/run_minishellrc.h
        include/terminal.h
        lib/libft/include/ft_bitmask.h
        lib/libft/include/ft_bools.h
        lib/libft/include/ft_char.h
        lib/libft/include/ft_hashmap.h
        lib/libft/include/ft_io.h
        lib/libft/include/ft_linked_list.h
        lib/libft/include/ft_math.h
        lib/libft/include/ft_mem.h
        lib/libft/include/ft_numbers.h
        lib/libft/include/ft_sort.h
        lib/libft/include/ft_string.h
        lib/libft/include/libft.h
        lib/libft/src/bitmask/bitmask_free.c
        lib/libft/src/bitmask/bitmask_get.c
        lib/libft/src/bitmask/bitmask_get_position.c
        lib/libft/src/bitmask/bitmask_init.c
        lib/libft/src/bitmask/bitmask_set.c
        lib/libft/src/bools/reverse_bool.c
        lib/libft/src/char/is_in_set.c
        lib/libft/src/char/isalnum.c
        lib/libft/src/char/isalpha.c
        lib/libft/src/char/isascii.c
        lib/libft/src/char/isdigit.c
        lib/libft/src/char/isprint.c
        lib/libft/src/char/isspace.c
        lib/libft/src/char/tolower.c
        lib/libft/src/char/toupper.c
        lib/libft/src/hashmap/hm_add_elem.c
        lib/libft/src/hashmap/hm_clear.c
        lib/libft/src/hashmap/hm_delete_elem.c
        lib/libft/src/hashmap/hm_get_content.c
        lib/libft/src/hashmap/hm_get_elem.c
        lib/libft/src/hashmap/hm_get_index.c
        lib/libft/src/hashmap/hm_init.c
        lib/libft/src/hashmap/hm_size.c
        lib/libft/src/io/get_next_line/get_next_line.c
        lib/libft/src/io/get_next_line/get_next_line.h
        lib/libft/src/io/get_next_line/get_next_line_utils.c
        lib/libft/src/io/printf/formating/format.c
        lib/libft/src/io/printf/formating/format_u_x.c
        lib/libft/src/io/printf/get_final_str.c
        lib/libft/src/io/printf/printf.c
        lib/libft/src/io/putchar_fd.c
        lib/libft/src/io/putendl_fd.c
        lib/libft/src/io/putnbr_fd.c
        lib/libft/src/io/putstr.c
        lib/libft/src/io/putstr_fd.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_get_next_free_current.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_of_dlst_clear.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_push.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_reverse.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstadd_back.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstadd_front.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstclear.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstdelone.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstiter.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstlast.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstmap.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstnew.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstsize.c
        lib/libft/src/linked_list/int/lsti_add_back.c
        lib/libft/src/linked_list/int/lsti_add_front.c
        lib/libft/src/linked_list/int/lsti_clear.c
        lib/libft/src/linked_list/int/lsti_cmp.c
        lib/libft/src/linked_list/int/lsti_cpy.c
        lib/libft/src/linked_list/int/lsti_delone.c
        lib/libft/src/linked_list/int/lsti_get_next_free_current.c
        lib/libft/src/linked_list/int/lsti_iter.c
        lib/libft/src/linked_list/int/lsti_last.c
        lib/libft/src/linked_list/int/lsti_map.c
        lib/libft/src/linked_list/int/lsti_new.c
        lib/libft/src/linked_list/int/lsti_push.c
        lib/libft/src/linked_list/int/lsti_reverse.c
        lib/libft/src/linked_list/int/lsti_size.c
        lib/libft/src/linked_list/void_ptr/lst_get_next_free_current.c
        lib/libft/src/linked_list/void_ptr/lst_join_strs.c
        lib/libft/src/linked_list/void_ptr/lst_of_lst_clear.c
        lib/libft/src/linked_list/void_ptr/lst_push.c
        lib/libft/src/linked_list/void_ptr/lst_remove_if.c
        lib/libft/src/linked_list/void_ptr/lst_reverse.c
        lib/libft/src/linked_list/void_ptr/lst_sort.c
        lib/libft/src/linked_list/void_ptr/lstadd_back.c
        lib/libft/src/linked_list/void_ptr/lstadd_front.c
        lib/libft/src/linked_list/void_ptr/lstclear.c
        lib/libft/src/linked_list/void_ptr/lstdelone.c
        lib/libft/src/linked_list/void_ptr/lstiter.c
        lib/libft/src/linked_list/void_ptr/lstlast.c
        lib/libft/src/linked_list/void_ptr/lstmap.c
        lib/libft/src/linked_list/void_ptr/lstnew.c
        lib/libft/src/linked_list/void_ptr/lstsize.c
        lib/libft/src/math/angle_to_theta.c
        lib/libft/src/mem/bzero.c
        lib/libft/src/mem/calloc.c
        lib/libft/src/mem/memchr.c
        lib/libft/src/mem/memcmp.c
        lib/libft/src/mem/memcpy.c
        lib/libft/src/mem/memmove.c
        lib/libft/src/mem/memset.c
        lib/libft/src/numbers/swap/swap_double.c
        lib/libft/src/numbers/swap/swap_int.c
        lib/libft/src/numbers/swap/swap_long.c
        lib/libft/src/numbers/swap/swap_size_t.c
        lib/libft/src/numbers/swap/swap_ssize_t.c
        lib/libft/src/numbers/swap/swap_uint.c
        lib/libft/src/numbers/abs.c
        lib/libft/src/numbers/atoi.c
        lib/libft/src/numbers/atoll.c
        lib/libft/src/numbers/itoa.c
        lib/libft/src/sort/msort_int.c
        lib/libft/src/sort/msort_str.c
        lib/libft/src/sort/msort_str_ignore_case.c
        lib/libft/src/string/join/join_strs.c
        lib/libft/src/string/join/strjoin.c
        lib/libft/src/string/join/strjoin_three.c
        lib/libft/src/string/split/free_split.c
        lib/libft/src/string/split/split.c
        lib/libft/src/string/split/split_set.c
        lib/libft/src/string/split/split_size.c
        lib/libft/src/string/split/split_unless_in_quotes.c
        lib/libft/src/string/is_number.c
        lib/libft/src/string/skip_char.c
        lib/libft/src/string/skip_set.c
        lib/libft/src/string/strchr.c
        lib/libft/src/string/strcmp.c
        lib/libft/src/string/strcmp_ignore_case.c
        lib/libft/src/string/strdup.c
        lib/libft/src/string/striteri.c
        lib/libft/src/string/strlcat.c
        lib/libft/src/string/strlcpy.c
        lib/libft/src/string/strlen.c
        lib/libft/src/string/strmapi.c
        lib/libft/src/string/strncmp.c
        lib/libft/src/string/strnstr.c
        lib/libft/src/string/strrchr.c
        lib/libft/src/string/strrstr.c
        lib/libft/src/string/strtrim.c
        lib/libft/src/string/substr.c
        src/built-in/cd/cd.c
        src/built-in/cd/get_cleaned_path.c
        src/built-in/alias/alias.c
        src/built-in/echo.c
        src/built-in/env.c
        src/built-in/exit.c
        src/built-in/export/export.c
        src/built-in/export/export_print.c
        src/built-in/export/export_variable.c
        src/built-in/export/export_variables.c
        src/built-in/pwd.c
        src/built-in/unset.c
        src/env_variables/get_env_variables.c
        src/env_variables/get_envp.c
        src/env_variables/print_env_variables.c
        src/error/error.c
        src/execution/exec_here_docs_tools.c
        src/execution/execute_command.c
        src/execution/execute_command_no_pipe.c
        src/execution/execute_piped_command.c
        src/execution/execute_pipes.c
        src/execution/execution.c
        src/execution/io_save.c
        src/execution/open_and_dup_files.c
        src/execution/run_builtin.c
        src/expansions/lexer/expressions.c
        src/expansions/lexer/tokens.c
        src/expansions/lexer/utils.c
        src/expansions/parameters/replace.c
        src/expansions/parameters/strdup_parameters.c
        src/expansions/paths/absolute_path.c
        src/expansions/paths/add_path.c
        src/expansions/paths/builtin.c
        src/expansions/paths/command.c
        src/expansions/wildcards/add.c
        src/expansions/wildcards/list.c
        src/expansions/wildcards/match.c
        src/expansions/wildcards/pattern_lexer.c
        src/expansions/wildcards/replace.c
        src/expansions/wildcards/slash.c
        src/expansions/wildcards/utils.c
        src/expansions/alias.c
        src/expansions/arguments.c
        src/expansions/files.c
        src/expansions/here_docs.c
        src/expansions/words/merge.c
        src/expansions/quotes.c
        src/expansions/tildes.c
        src/expansions/token.c
        src/expansions/words/splitting.c
        src/interactive/here_docs.c
        src/interactive/here_docs_syntax.c
        src/interactive/input.c
        src/interactive/parsing.c
        src/interactive/shell.c
        src/interactive/utils.c
        src/lexer/identifier.c
        src/lexer/operator.c
        src/lexer/token.c
        src/parser/simplify_tokens/add_command/add_args.c
        src/parser/simplify_tokens/add_command/add_command.c
        src/parser/simplify_tokens/add_command/get_files.c
        src/parser/simplify_tokens/get_subshells.c
        src/parser/simplify_tokens/simplify_tokens.c
        src/parser/parse_tokens.c
        src/parser/quotes.c
        src/parser/syntax.c
        src/prompt/get_command_result.c
        src/prompt/add_git_branch.c
        src/prompt/get_prompt.c
        src/signals/general_signal_handling.c
        src/signals/interactive_signal_handling.c
        src/signals/pipes_signal_handling.c
        src/execute_single_line_command.c
        src/exit_code.c
        src/free_minishell.c
        src/get_cursor_x_pos.c
        src/main.c
        src/run_minishellrc.c

target_link_libraries(minishell readline)